<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.AddingReminderFragment"
    android:tag="@string/Adding_Reminder_Fragment_Tag">

    <ImageView
        android:id="@+id/bg2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="60dp"
        android:paddingVertical="20dp">

        <EditText
            android:id="@+id/reminding_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="10"
            android:background="@drawable/buttonshape"
            android:ems="10"
            android:hint="write your reminder here"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/set_date_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:background="@drawable/buttonshape"
            android:text="set date"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>

        <Button
            android:id="@+id/set_time_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:background="@drawable/buttonshape"
            android:text="set time"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>

        <Button
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_weight="0"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="create"
            android:textColor="#000000"
            android:textSize="30sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>