...
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <Button
            android:id="@+id/remove_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
...
            android:shadowRadius="5"
            android:text="remove"
            android:textColor="#990000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
...
